@startuml

title __FLOWERMANAGER's Class Diagram__\n

  namespace flowermanager {
    class flowermanager.Converter {
    }
  }
  

  namespace flowermanager {
    class flowermanager.Converter {
    }
  }
  

  namespace flowermanager {
    class flowermanager.FlowerManager {
    }
  }
  

  namespace flowermanager {
    class flowermanager.FlowerManager {
    }
  }
  

  namespace flowermanager {
    namespace controller {
      class flowermanager.controller.FlowerManagerController {
      }
    }
  }
  

  namespace flowermanager {
    namespace controller {
      class flowermanager.controller.FlowerManagerController {
      }
    }
  }
  

  namespace flowermanager {
    namespace controller {
      class flowermanager.controller.HomePageController {
      }
    }
  }
  

  namespace flowermanager {
    namespace controller {
      class flowermanager.controller.HomePageController {
      }
    }
  }
  

  namespace flowermanager {
    namespace controller {
      class flowermanager.controller.LoginController {
      }
    }
  }
  

  namespace flowermanager {
    namespace controller {
      class flowermanager.controller.LoginController {
      }
    }
  }
  

  namespace flowermanager {
    namespace controller {
      class flowermanager.controller.OrderController {
      }
    }
  }
  

  namespace flowermanager {
    namespace controller {
      class flowermanager.controller.OrderController {
      }
    }
  }
  

  namespace flowermanager {
    namespace controller {
      class flowermanager.controller.ReturnFormController {
      }
    }
  }
  

  namespace flowermanager {
    namespace controller {
      class flowermanager.controller.ReturnFormController {
      }
    }
  }
  

  namespace flowermanager {
    namespace database {
      class flowermanager.database.Database {
      }
    }
  }
  

  namespace flowermanager {
    namespace database {
      class flowermanager.database.Database {
      }
    }
  }
  

  namespace flowermanager {
    namespace entity {
      class flowermanager.entity.Flower {
      }
    }
  }
  

  namespace flowermanager {
    namespace entity {
      class flowermanager.entity.Flower {
      }
    }
  }
  

  namespace flowermanager {
    namespace entity {
      class flowermanager.entity.Order {
      }
    }
  }
  

  namespace flowermanager {
    namespace entity {
      class flowermanager.entity.Order {
      }
    }
  }
  

  namespace flowermanager {
    class flowermanager.getData {
    }
  }
  

  namespace flowermanager {
    class flowermanager.getData {
    }
  }
  

  flowermanager.FlowerManager -up-|> javafx.application.Application
  flowermanager.FlowerManager -up-|> javafx.application.Application
  flowermanager.controller.FlowerManagerController .up.|> javafx.fxml.Initializable
  flowermanager.controller.FlowerManagerController .up.|> javafx.fxml.Initializable
  flowermanager.controller.HomePageController .up.|> javafx.fxml.Initializable
  flowermanager.controller.HomePageController .up.|> javafx.fxml.Initializable
  flowermanager.controller.LoginController .up.|> javafx.fxml.Initializable
  flowermanager.controller.LoginController .up.|> javafx.fxml.Initializable
  flowermanager.controller.OrderController .up.|> javafx.fxml.Initializable
  flowermanager.controller.OrderController .up.|> javafx.fxml.Initializable
  flowermanager.controller.ReturnFormController .up.|> javafx.fxml.Initializable
  flowermanager.controller.ReturnFormController .up.|> javafx.fxml.Initializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
